adding style to the sire-plan

--- a/wwr/site-plan-rafting-.html
+++ b/wwr/site-plan-rafting-.html
@@ -9,9 +9,9 @@
 
 <body>
   <header>
-    <h1>[Site name] Site Plan</h1>
-    <h2>[FirstName LastName]</h2>
-    <h2>WDD 130-[section]</h2>
+    <h1>RiverDash Site Plan</h1>
+    <h2>Adonai Villalobos</h2>
+    <h2>WDD 130-A6</h2>
     <!-- In the header above, add the name of your site, your name and class number. For example if you are in section 3 you would put WDD 130-03 -->
   </header>
   <main>
@@ -19,18 +19,20 @@
     <hr />
     <h2>Overview</h2>
     <h3>Purpose</h3>
-    <p>[Your purpose here]</p>
+    <p>The purpose of RiverDash would be to provide thrilling and memorable river rafting experiences to our costumers. We will do it by</p>
+    <p>teaching and traini our costumer according to their needs and the time they have, we will also provide the best security team so they can enjoy and spend a gret time.</p>
     <!-- change this -->
 
     <h3>Audience</h3>
-    <p>[Your audience here]</p>
+    <p>In orde to maximize revenue and to create a community for RiverDash it's essential to identify and target the most suitable Audience,</p>
+    <p>some potential costumers would be adventure seekers, families, tourist and vacationers, corporate groups, school and youth groups, etc.</p>
     <!-- change this -->
 
     <hr />
     <h2>Branding</h2>
     <h3>Website Logo</h3>
     <!-- Replace this with some sort of logo for your site.  A logo can be as simple as the name of your site in a nice font :) -->
-    <img src="https://byui-wdd.github.io/wdd130/rafting_images/dryoarlogo.png" alt="Logo image" />
+    <img src="images/riverdash_logo.png" alt="Logo" />
     <hr />
     <h2>Style Guide</h2>
 
