--- a/wwr/index.html
+++ b/wwr/index.html
@@ -3,14 +3,68 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Whitewater Rafting Vacations | RiverDash | Home</title>
+    <title>Whitewater Rafting Vacations | Dry Oar | Home</title>
 </head>
 <body>
     <header>
         <a id="logo_link" href="index.html">
             <img src="images/riverdash_logo.png" alt="RiverDash Logo">
         </a>
-        
+        <nav>
+            <a href="index.html">Home</a>
+            <a href="#">Page 2</a>
+            <a href="site-plan-rafting.html">Site Plan</a>
+            <a href="contactus.html">Contact Us</a>
+        </nav>
     </header>
+    <div id="hero-box">
+        <div id="hero-box">
+            <img id="hero-img" src="images/hero.png" alt="People enjoying white water rafting">
+        </div>
+        <section id="hero-msg">
+            <h1 class="home-title">Have an Adventure</h1>
+            <h4> Make memories with Dry Oar</h4>
+            <div class="button-box">
+                <a class="book" href="contactus.html">Book Now</a>
+            </div>
+        </section>
+    </div>
+    <main class="home-grid">
+        <section class="rivers-card">
+            <img class="card-img" src="images/rivers.jpg" alt="river in forest">
+            <img class="incon" src="images/river_icon" alt="river icon">
+        </section>
+        <section class="camping-card">
+            <img class="card-img" src="images/camping.jpg" alt="tent in mountains">
+            <img class="icon" src="images/file_icon.png" alt="fire icon">
+        </section>
+        <section class="rapids-card">
+            <img class="card-img" src="images/rapid.jpg" alt="rafting boat">
+            <img class="incon" src="images/oars.png" alt="oars icon">
+            <h2>Rapids</h2>
+        </section>
+        <img class="mountains" src="images/mountains.jpg" alt="Misty Mountains">
+        <section class="msg">
+            <h2>More Than Just The Thrill</h2>
+            <p>Enjoy the breathtaking scenary. From valleys, meadows, canyons, and high peaks; it's way more than just rapids. It's  a great  way to get away from it all and relax amongst all the beauty of the great outdoors. </p>
+            <a href="join" href="rivers.html">Join Us</a>
+        </section>
+    </main>
+    <footer>
+        <p>Dry Oar &copy; 2023 - Adonai Villalobos</p>
+        <p><a href="site-plan-rafting.html">Site Plan</a></p>
+        <p><a href="contactus.html">Contact Us</a></p>
+        <div class="social">
+            <a href="https://facebook.com">
+                <img src="images/facebook.png" alt="F=fb icon">
+            </a>
+            <a href="https://twitter.com">
+                <img src="images/twitter.png" alt="twitter icon">
+            </a>
+            <a href="https://instagram.com">
+                <img src="images/instagram.png" alt="instagram icon">
+            </a>
+        </div>
+    </footer>
 </body>
 </html>
