--- a/wwr/index.html
+++ b/wwr/index.html
@@ -8,7 +8,7 @@
 <body>
     <header>
         <a id="logo_link" href="index.html">
-            <img src="images/riverdash_logo.png" alt="RiverDash Logo">
+            <img src="images/logo.png" alt="Dry Oar Logo">
         </a>
         <nav>
             <a href="index.html">Home</a>
