--- a/wwr/index.html
+++ b/wwr/index.html
@@ -47,7 +47,7 @@
         <section class="msg">
             <h2>More Than Just The Thrill</h2>
             <p>Enjoy the breathtaking scenary. From valleys, meadows, canyons, and high peaks; it's way more than just rapids. It's  a great  way to get away from it all and relax amongst all the beauty of the great outdoors. </p>
-            <a href="join" href="rivers.html">Join Us</a>
+            <a class="join" href="rivers.html">Join Us</a>
         </section>
     </main>
     <footer>
