--- a/wwr/index.html
+++ b/wwr/index.html
@@ -32,11 +32,11 @@
     <main class="home-grid">
         <section class="rivers-card">
             <img class="card-img" src="images/rivers.jpg" alt="river in forest">
-            <img class="incon" src="images/river_icon" alt="river icon">
+            <img class="icon" src="images/rivers_icon.png" alt="river icon">
         </section>
         <section class="camping-card">
             <img class="card-img" src="images/camping.jpg" alt="tent in mountains">
-            <img class="icon" src="images/file_icon.png" alt="fire icon">
+            <img class="icon" src="images/fire_icon.png" alt="fire icon">
         </section>
         <section class="rapids-card">
             <img class="card-img" src="images/rapid.jpg" alt="rafting boat">
