--- a/wwr/challenge_w4.html
+++ b/wwr/challenge_w4.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Education</title>
+    <link type="text/css" rel="stylesheet" href="styles/challenge_w4.css">
 </head>
 <body>
+    <header>
+        <h1>Education</h1>
+    </header>
     
 </body>
 </html>
