--- a/wwr/challenge_w4.html
+++ b/wwr/challenge_w4.html
@@ -9,7 +9,29 @@
 <body>
     <header>
         <h1>Education</h1>
+        <p>Education is the difference between wishing you could help others & being able to help them.</p>
+        <p>---President Nelson</p>
     </header>
+    <main>
+        <ul>1. Faith in the Lord Jesus Christ.</ul>
+        <ul>2. Repentance.</ul>
+        <ul>3. Baptism by immersion for the remission of sins.</ul>
+        <ul>4. Laying on of hands for the gift of the Holy Ghost. </ul>
+        <img src="images/president_nelson.jpg" alt="president nelson">
+        <p><strong>"Because of the</strong><br></p>
+        <p><strong>Savior's Atonement,</strong></p>
+        <p><strong>His gospel provides</strong><br></p>
+        <p><strong>an intivation to keep</strong></p>
+        <p><strong>changing, growing,</strong><br></p>
+        <p><strong>and becoming more</strong></p>
+        <p><strong>pure."</strong></p>
+    </main>
+    <footer>
+        <p>Russell M. Nelson</p>
+        <p>President of the Church of Jesus Christ of Latter-</p>
+        <p>day Saints.</p>
+    </footer>
     
+
 </body>
 </html>
