--- a/wwr/challenge_w4.html
+++ b/wwr/challenge_w4.html
@@ -13,11 +13,15 @@
         <p>---President Nelson</p>
     </header>
     <main>
-        <ul>1. Faith in the Lord Jesus Christ.</ul>
-        <ul>2. Repentance.</ul>
-        <ul>3. Baptism by immersion for the remission of sins.</ul>
-        <ul>4. Laying on of hands for the gift of the Holy Ghost. </ul>
+        <ul>1. Faith in the Lord Jesus Christ</ul>
+        <ul>2. Repentance</ul>
+        <ul>3. Baptism by immersion for the remission of sins</ul>
+        <ul>4. Laying on of the hands for the gift of the Holy Ghost</ul>
+
+
         <img src="images/president_nelson.jpg" alt="president nelson">
+
+
         <p><strong>"Because of the</strong><br></p>
         <p><strong>Savior's Atonement,</strong></p>
         <p><strong>His gospel provides</strong><br></p>
