--- a/wwr/index.html
+++ b/wwr/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
+    <div id="content">
     <header>
         <a id="logo_link" href="index.html">
             <img src="images/logo.png" alt="Dry Oar Logo">
@@ -55,17 +56,18 @@
         <p>Dry Oar &copy; 2023 - Adonai Villalobos</p>
         <p><a href="site-plan-rafting.html">Site Plan</a></p>
         <p><a href="contactus.html">Contact Us</a></p>
-        <div class="social">
-            <a href="https://facebook.com" target="_blank">
+            <div class="social">
+                <a href="https://facebook.com" target="_blank">
                 <img src="images/facebook.png" alt="F=fb icon">
-            </a>
-            <a href="https://twitter.com" target="_blank">
+                </a>
+                <a href="https://twitter.com" target="_blank">
                 <img src="images/twitter.png" alt="twitter icon">
-            </a>
-            <a href="https://instagram.com" target="_blank">
+                </a>
+                <a href="https://instagram.com" target="_blank">
                 <img src="images/instagram.png" alt="instagram icon">
-            </a>
-        </div>
-    </footer>
+                </a>
+            </div>
+        </footer>
+    </div>
 </body>
 </html>
