--- a/wwr/index.html
+++ b/wwr/index.html
@@ -45,6 +45,7 @@
             <img class="incon" src="images/oars.png" alt="oars icon">
             <h2>Rapids</h2>
         </section>
+        <div id="background"></div>
         <img class="mountains" src="images/mountains.jpg" alt="Misty Mountains">
         <section class="msg">
             <h2>More Than Just The Thrill</h2>
