--- a/get2work/site-plan.html
+++ b/get2work/site-plan.html
@@ -9,9 +9,9 @@
 
   <body>
     <header>
-      <h1>[Site name] Site Plan</h1>
-      <h2>FirstName LastName</h2>
-      <h2>WDD 130-[section]</h2>
+      <h1>Digital Portfolio | Adonai Villalobos</h1>
+      <h2>Adonai Villalobos</h2>
+      <h2>WDD 130-06</h2>
       <!-- In the header above, add the name or your site, your name and class number. For example if you are in section 3 you would put WDD 130.03 -->
     </header>
     <main>
@@ -20,17 +20,17 @@
       <hr>
       <h2>Overview</h2>
       <h3>Purpose</h3>
-      <p>[Your purpose here]</p>  <!-- change this -->
+      <p>The use of this website will be as a personal portfolio and also as a place for other to interact with me to work together in a project and to learn about Web Design.</p>  <!-- change this -->
 
 
       <h3>Audience</h3>
-      <p>[Your audience here]</p>  <!-- change this -->
+      <p>The audience for my personal website will be future employers and future collages and possible students/learners that are interested in learning how to become a Web Developer.</p>  <!-- change this -->
 
       <hr>
       <h2>Branding</h2>
       <h3>Website Logo</h3>
       <!-- Replace this with some sort of logo for your site.  A logo can be as simple as the name of your site in a nice font :) -->
-      <img src="#" alt="Logo image">
+      <img src="images/advr_logo.png" alt="advr logo">
       <hr>
       <h2>
         Style Guide
@@ -44,13 +44,13 @@
       <!--  The colors you choose for a website are one of the most important decisions you will make. Follow the instructions on the activity in iLearn then return and replace the color codes below with the hex color codes (the 6 digit numbers that show at the bottom of each color) for the colors you have chosen below.  You should have at least 2 colors but do not have to fill in all 4 if you do not need them.  -->
 
       <!-- Copy and paste the URL to your finished palette below Make sure to paste it into both spots -->
-      Palette URL: <a href="https://coolors.co/396e94-e7c24f-a43312-381d2a-aabd8c" target="_blank">https://coolors.co/396e94-e7c24f-a43312-381d2a-aabd8c</a>
+      Palette URL: <a href="https://coolors.co/ffffff-000000-9f9f9f-059337-4b73df" target="_blank">https://coolors.co/ffffff-000000-9f9f9f-059337-4b73df</a>
 
 
       <table class="colors">
         <tr><th>Primary</th><th>Secondary</th><th>Accent 1</th><th>Accent 2</th></tr>
         <!-- Replace the numbers in the boxes below with your hex color codes. Then switch to the site-plan.css file and change your colors there as well. -->
-        <tr><td class="primary">[#396E94]</td><td class="secondary">[#E7C24F]</td><td class="accent1">[#A43312]</td><td class="accent2"></td></tr>
+        <tr><td class="primary">#4b73df</td><td class="secondary">#ffffff</td><td class="accent1">#059337</td><td class="accent2">#9f9f9f</td></tr>
       </table>
 
       <!-- ------------------------Step 9------------------------------ -->
