--- a/wwr/rivers.html
+++ b/wwr/rivers.html
@@ -18,7 +18,32 @@
             <a href="site-plan-rafting.html">Site Plan</a>
             <a href="contactus.html">Contact Us</a>
         </nav>
+     </header>
 
-    </header>
+
+
+
+
+
+
+
+
+     
+     <<footer>
+        <p>Dry Oar &copy; 2023 - Adonai Villalobos</p>
+        <p><a href="site-plan-rafting.html">Site Plan</a></p>
+        <p><a href="contactus.html">Contact Us</a></p>
+            <div class="social">
+                <a href="https://facebook.com" target="_blank">
+                <img src="images/facebook.png" alt="facebook icon">
+                </a>
+                <a href="https://twitter.com" target="_blank">
+                <img src="images/twitter.png" alt="twitter icon">
+                </a>
+                <a href="https://instagram.com" target="_blank">
+                <img src="images/instagram.png" alt="instagram icon">
+                </a>
+            </div>
+        </footer>
 </body>
 </html>
