--- a/wwr/rivers.html
+++ b/wwr/rivers.html
@@ -28,8 +28,8 @@
 
 
 
-     
-     <<footer>
+
+     <footer>
         <p>Dry Oar &copy; 2023 - Adonai Villalobos</p>
         <p><a href="site-plan-rafting.html">Site Plan</a></p>
         <p><a href="contactus.html">Contact Us</a></p>
