--- a/wwr/rivers.html
+++ b/wwr/rivers.html
@@ -26,7 +26,15 @@
         
     </div>
     <main>
+        <section class="salmon-river">
+            <img class="salmon-river-img" src="images/salmon_river.jpeg" alt="Salmon River">
+            <h2>Salmon River</h2>
+        </section>
+
+        
         <h1>Rivers</h1>
+        <h2>Main Fork of the Salmon River, Idaho</h2>
+        <p></p>
     </main>
 
 
