--- a/wwr/rivers.html
+++ b/wwr/rivers.html
@@ -29,6 +29,7 @@
         <section class="salmon-river">
             <img class="salmon-river-img" src="images/salmon_river.jpeg" alt="Salmon River">
             <h2>Salmon River</h2>
+            <p>Nestled deeped in the Frank Church Wilderness of the No Return winds the Salmon river. The salmon  was given the nickname long ago as the River of No Return by the people living near it because  of the number of folks  that came to visit and fell so in love with the rugged beauty of the river that they never left</p>
         </section>
 
         
