--- a/wwr/rivers.html
+++ b/wwr/rivers.html
@@ -28,6 +28,7 @@
     <main>
         <h1>Rivers</h1>
         <h2>Main Fork of the Salmon River, Idaho</h2>
+        <div class="container">
         <section class="salmon-river">
             <img class="salmon-river-img" src="images/salmon_river.jpeg" alt="Salmon River">
             <h2>Salmon River</h2>
@@ -35,6 +36,7 @@
             <p>Herds of elk and deer graze on the hillsides around the river and bear and bighorn sheep are also commonly sighted. The river corridor is also lined with awe inspiring ponderosa pine which tower over the sandy beaches in the campsites and provide shelter from sun or rain when needed.<br></p>
             <p>Let's not forget the rapids! They range from class I-IV. The Salmon is one of the longest undammed rivers in the United States. As a free flowing river the water is higher, faster, and colder in the early summer and lower, slower, and warmer in the late summer. There are good rapids all summer...but families with children who like to swim tend to appreciate the late summer's slower, warmer water more.</p>
         </section>
+        </div>
     </main>
 
 
