--- a/wwr/rivers.html
+++ b/wwr/rivers.html
@@ -28,7 +28,7 @@
     <main>
         <h1>Rivers</h1>
         <h2>Main Fork of the Salmon River, Idaho</h2>
-        <div class="container">
+        <div class="container-salmon">
         <section class="salmon-river">
             <img class="salmon-river-img" src="images/salmon_river.jpeg" alt="Salmon River">
             <p>Nestled deeped in the Frank Church Wilderness of the No Return winds the Salmon river. The salmon  was given the nickname long ago as the River of No Return by the people living near it because  of the number of folks  that came to visit and fell so in love with the rugged beauty of the river that they never left.<br></p>
@@ -36,6 +36,7 @@
             <p>Let's not forget the rapids! They range from class I-IV. The Salmon is one of the longest undammed rivers in the United States. As a free flowing river the water is higher, faster, and colder in the early summer and lower, slower, and warmer in the late summer. There are good rapids all summer...but families with children who like to swim tend to appreciate the late summer's slower, warmer water more.</p>
         </section>
         </div>
+        <div class=""
     </main>
 
 
