--- a/wwr/rivers.html
+++ b/wwr/rivers.html
@@ -29,14 +29,21 @@
         <h1>Rivers</h1>
         <h2>Main Fork of the Salmon River, Idaho</h2>
         <div class="container-salmon">
-        <section class="salmon-river">
-            <img class="salmon-river-img" src="images/salmon_river.jpeg" alt="Salmon River">
-            <p>Nestled deeped in the Frank Church Wilderness of the No Return winds the Salmon river. The salmon  was given the nickname long ago as the River of No Return by the people living near it because  of the number of folks  that came to visit and fell so in love with the rugged beauty of the river that they never left.<br></p>
-            <p>Herds of elk and deer graze on the hillsides around the river and bear and bighorn sheep are also commonly sighted. The river corridor is also lined with awe inspiring ponderosa pine which tower over the sandy beaches in the campsites and provide shelter from sun or rain when needed.<br></p>
-            <p>Let's not forget the rapids! They range from class I-IV. The Salmon is one of the longest undammed rivers in the United States. As a free flowing river the water is higher, faster, and colder in the early summer and lower, slower, and warmer in the late summer. There are good rapids all summer...but families with children who like to swim tend to appreciate the late summer's slower, warmer water more.</p>
-        </section>
+            <section class="salmon-river">
+                <img class="salmon-river-img" src="images/salmon_river.jpeg" alt="Salmon River">
+                    <p>Nestled deeped in the Frank Church Wilderness of the No Return winds the Salmon river. The salmon  was given the nickname long ago as the River of No Return by the people living near it because  of the number of folks  that came to visit and fell so in love with the rugged beauty of the river that they never left.<br></p>
+                    <p>Herds of elk and deer graze on the hillsides around the river and bear and bighorn sheep are also commonly sighted. The river corridor is also lined with awe inspiring ponderosa pine which tower over the sandy beaches in the campsites and provide shelter from sun or rain when needed.<br></p>
+                    <p>Let's not forget the rapids! They range from class I-IV. The Salmon is one of the longest undammed rivers in the United States. As a free flowing river the water is higher, faster, and colder in the early summer and lower, slower, and warmer in the late summer. There are good rapids all summer...but families with children who like to swim tend to appreciate the late summer's slower, warmer water more.</p>
+            </section>
         </div>
-        <div class=""
+        <div class="container-desolation">
+            <section class="desolation-river">
+                <img class="desolation-river-img" src="images/desolation_river.jpeg" alt="Desolation River">
+                    <p>Winding through canyons in central Utah, in some of the most desolate land anywhere, the Green river flows towards the mighty Colorado river and the sea. High grey stone cliffs, beautiful desert scenery, and great rapids have made this run famous. This 84-mile trip runs from from Sand Wash to Swaseys Rapid (just outside Green River Utah) and boasts outstanding scenery, interesting geologic formations, evidence of prehistoric and historic human activity, and great whitewater opportunities.<br></p>
+                    <p>Desolation is rated a Class II/III and is usually done in 6 days.<br></p>
+                    <p>Desolation Canyon has been recognized as a National Landmark.  This designation is based on the uniqueness and rich history that the canyon tells.</p>
+            </section>
+        </div>
     </main>
 
 
