--- a/wwr/rivers.html
+++ b/wwr/rivers.html
@@ -36,6 +36,7 @@
                     <p>Let's not forget the rapids! They range from class I-IV. The Salmon is one of the longest undammed rivers in the United States. As a free flowing river the water is higher, faster, and colder in the early summer and lower, slower, and warmer in the late summer. There are good rapids all summer...but families with children who like to swim tend to appreciate the late summer's slower, warmer water more.</p>
             </section>
         </div>
+        <h2>Desolation, Utah</h2>
         <div class="container-desolation">
             <section class="desolation-river">
                 <img class="desolation-river-img" src="images/desolation_river.jpeg" alt="Desolation River">
