--- a/wwr/rivers.html
+++ b/wwr/rivers.html
@@ -45,6 +45,11 @@
                     <p>Desolation Canyon has been recognized as a National Landmark.  This designation is based on the uniqueness and rich history that the canyon tells.</p>
             </section>
         </div>
+        <section class="msg">
+            <h2>More Than Just The Thrill</h2>
+            <p>Enjoy the breathtaking scenary. From valleys, meadows, canyons, and high peaks; it's way more than just rapids. It's  a great  way to get away from it all and relax amongst all the beauty of the great outdoors. </p>
+            <a class="join" href="rivers.html">Join Us</a>
+        </section>
     </main>
 <footer>
         <p>Dry Oar &copy; 2023 - Adonai Villalobos</p>
