--- a/get2work/index.html
+++ b/get2work/index.html
@@ -7,6 +7,19 @@
     <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
+    <div id="content">
+        <header>
+            <a id="logo-link" href="index.html">
+                <img class="logo" src="images/advr_logo.png" alt="Logo">
+            </a>
+            <nav>
+                <a href="index.html">Home</a>
+                <a href="#">Page 2</a>
+                <a href="site-plan.html">Site Plan</a>
+                <a href="contactme.html">Contact Me</a>
+            </nav>
+        </header>
+    </div>
     
 </body>
 </html>
