--- a/get2work/index.html
+++ b/get2work/index.html
@@ -25,7 +25,8 @@
         <h2>Audience</h2>
         <p>Visitors will come to my site for various reason, and it is essential to understand their motivations. These reasons may include:Visitors will come to my site for various reason, and it is essential to understand their motivations. These reasons may include:<br></p>
         <p><strong>Information:</strong>Visitors seek relevant and valuable information. This could be educational content, news, product details, or any other data that addresses their needs or interest.<br></p>
-        <p>Entertainment: Some visitors may come to be entertained. They are looking for engaging content, such as videos, games, or stories that captivate their attention.<br></p>
+        <p><strong>Entertainment:</strong>Some visitors may come to be entertained. They are looking for engaging content, such as videos, games, or stories that captivate their attention.<br></p>
+        <p><strong>Community:</strong>Visitors often seek a sense of community or social interaction. </p>
     </section>
     
 </body>
