--- a/get2work/index.html
+++ b/get2work/index.html
@@ -28,6 +28,11 @@
         <p><strong>Entertainment:</strong>Some visitors may come to be entertained. They are looking for engaging content, such as videos, games, or stories that captivate their attention.<br></p>
         <p><strong>Community:</strong>Visitors often seek a sense of community or social interaction. </p>
     </section>
+    <section class="vision">
+        <img class="vision-img" src="images/vision.jpeg" alt="Vision">
+        <p>The vision or reason for this website is to help other to learn and understand this world of web developing and programming, soomething that could difficult we can find different ways to transform it in a easy path.<br></p>
+        <p>Even if it is the beginning for me in this world, I can offer my visitors the option to have someone who knows what it is like to know nothing, and to do my best to learn and put into practice all that I have learned.<br></p>
+    </section>
     
 </body>
 </html>
