--- a/get2work/index.html
+++ b/get2work/index.html
@@ -32,6 +32,9 @@
         <img class="vision-img" src="images/vision.jpeg" alt="Vision">
         <p>The vision or reason for this website is to help other to learn and understand this world of web developing and programming, soomething that could difficult we can find different ways to transform it in a easy path.<br></p>
         <p>Even if it is the beginning for me in this world, I can offer my visitors the option to have someone who knows what it is like to know nothing, and to do my best to learn and put into practice all that I have learned.<br></p>
+    <div class="future-projects">
+        <h2>Future Projects</h2>
+    </div>
     </section>
     
 </body>
