--- a/get2work/index.html
+++ b/get2work/index.html
@@ -36,6 +36,14 @@
         <p>Even if it is the beginning for me in this world, I can offer my visitors the option to have someone who knows what it is like to know nothing, and to do my best to learn and put into practice all that I have learned.<br></p>
     <div class="future-projects">
         <h2>Future Projects</h2>
+        <section class="html">
+            <img class="html-card" src="images/html.png" alt="HTMl">
+            <h2>HTML Course</h2>
+        </section>
+        <section class="css">
+            <img class="css-card" src="images/css.png" alt="CSS">
+            <h2>CSS Course</h2>
+        </section>
     </div>
     </section>
     
