--- a/get2work/index.html
+++ b/get2work/index.html
@@ -20,6 +20,7 @@
             </nav>
         </header>
     </div>
+    <main>
     <section class="audience">
         <img class="audience-img" src="images/audience.jpeg" alt="Audience">
         <h2>Audience</h2>
@@ -46,6 +47,7 @@
         </section>
     </div>
     </section>
+    </main>
     
 </body>
 </html>
