--- a/get2work/index.html
+++ b/get2work/index.html
@@ -48,6 +48,22 @@
     </div>
     </section>
     </main>
+    <footer>
+        <p>ADVR Web Developer Portfolio &copy; 2023 - Adonai Villalobos</p>
+        <p><a href="site-plan.html">Site Plan</a></p>
+        <p><a href="contactme.html">Contact Me</a></p>
+            <div class="social">
+                <a href="https://facebook.com" target="_blank">
+                <img src="images/facebook.png" alt="facebook icon">
+                </a>
+                <a href="https://twitter.com" target="_blank">
+                <img src="images/twitter.png" alt="twitter icon">
+                </a>
+                <a href="https://instagram.com" target="_blank">
+                <img src="images/instagram.png" alt="instagram icon">
+                </a>
+            </div>
+    </footer>
     
 </body>
 </html>
