--- a/get2work/site-plan.html
+++ b/get2work/site-plan.html
@@ -86,9 +86,9 @@
       </h3>
       <!-- Think about how you want your navigation bar to look. In the site-plan.css file change the colors to your colors to get the look you desire. --> 
       <nav>
-        <a href="#">Home</a>
-        <a href="#">Page2</a>
-        <a href="#">Page3</a>
+        <a href="index.html">Home</a>
+        <a href="courses.html">Courses</a>
+        <a href="aboutme.html">About Me</a>
       </nav>
       <hr>
       <h2>
@@ -99,10 +99,10 @@
           Home
         </div>
         <div class="sm-page2">
-          [Page2] <!-- change this -->
+          [Courses] <!-- change this -->
         </div>
         <div class="sm-page3">
-          [Page3]  <!-- change this -->
+          [About Me]  <!-- change this -->
         </div>
 
         <div class="top">
@@ -124,7 +124,7 @@
       </h2>
       <h3>Home page</h3>
       <p>
-        [Written copy for the home page here]
+        [This will be the content for the Home Page, I will divide this section in subsections in order to make the informacion clear.]
       </p>
       <p>Images for the Home page</p>
         <img src="#" alt="image for homepage">
