--- a/get2work/site-plan.html
+++ b/get2work/site-plan.html
@@ -126,6 +126,12 @@
       <p>
         [This will be the content for the Home Page, I will divide this section in subsections in order to make the informacion clear.]
       </p>
+      <p>
+        [This will be fpr the audience: Visitors will come to my site for various reason, and it is essential to understand their motivations. These reasons may include:
+        Information: Visitors seek relevant and valuable information. This could be educational content, news, product details, or any other data that addresses their needs or interest.
+        Entertainment: Some visitors may come to be entertained. They are looking for engaging content, such as videos, games, or stories that captivate their attention.
+        Community: Visitors often seek a sense of community or social interaction.]
+      </p>
       <p>Images for the Home page</p>
         <img src="#" alt="image for homepage">
         <img src="#" alt="image for homepage">
