--- a/get2work/site-plan.html
+++ b/get2work/site-plan.html
@@ -127,10 +127,17 @@
         [This will be the content for the Home Page, I will divide this section in subsections in order to make the informacion clear.]
       </p>
       <p>
-        [This will be fpr the audience: Visitors will come to my site for various reason, and it is essential to understand their motivations. These reasons may include:
+        [This first section will be for the audience: Visitors will come to my site for various reason, and it is essential to understand their motivations. These reasons may include:
         Information: Visitors seek relevant and valuable information. This could be educational content, news, product details, or any other data that addresses their needs or interest.
         Entertainment: Some visitors may come to be entertained. They are looking for engaging content, such as videos, games, or stories that captivate their attention.
         Community: Visitors often seek a sense of community or social interaction.]
+      </p>
+      <p>
+        [The second section will be for the Purpose/Vision of this website.]
+      </p>
+      <p>
+        [The vision or reason for this website is to help other to learn and understand this world of web developing and programming, soomething that could difficult we can find different ways to transform it in a easy path.
+        <p>Even if it is the beginning for me in this world, I can offer my visitors the option to have someone who knows what it is like to know nothing, and to do my best to learn and put into practice all that I have learned.]
       </p>
       <p>Images for the Home page</p>
         <img src="#" alt="image for homepage">
