--- a/get2work/site-plan.html
+++ b/get2work/site-plan.html
@@ -146,6 +146,9 @@
         <img src="images/instagram.png" alt="instagram">
         <img src="images/twitter.png" alt="twitter">
         <img src="images/hero.png" alt="hero">
+        <img src="images/html.png" alt="html course">
+        <img src="images/css.png" alt="css course">
+        
 
       </ul>
       <h3>[Page 2]</h3>
