--- a/get2work/site-plan.html
+++ b/get2work/site-plan.html
@@ -148,12 +148,12 @@
         <img src="images/hero.png" alt="hero">
         <img src="images/html.png" alt="html course">
         <img src="images/css.png" alt="css course">
-        
+
 
       </ul>
-      <h3>[Page 2]</h3>
+      <h3>[Courses]</h3>
       <p>
-        [Written copy for the Page 2 here]
+        [For this page I would like to add some of the material that I have written and personal notes about this course that could help others. I am still working of the notes to make them look better and use them as a form of free course to the audience]
       </p>
       <p>Images for the Page 2</p>
         <img src="#" alt="image for page">
