--- a/get2work/site-plan.html
+++ b/get2work/site-plan.html
@@ -156,9 +156,14 @@
         [For this page I would like to add some of the material that I have written and personal notes about this course that could help others. I am still working of the notes to make them look better and use them as a form of free course to the audience]
       </p>
       <p>Images for the Page 2</p>
-        <img src="#" alt="image for page">
-        <img src="#" alt="image for page">
-
+        <img src="images/html.png" alt="HTML course">
+        <img src="images/css.png" alt="css">
+        <img src="images/advr_logo.png" alt="logo">
+        <img src="images/facebook.png" alt="facebook">
+        <img src="images/instagram.png" alt="instagram">
+        <img src="images/twitter.png" alt="twitter">
+        <img src="images/hero.png" alt="hero">
+ 
       </ul>
       <h3>[Page 3]</h3>
       <p>
