--- a/get2work/site-plan.html
+++ b/get2work/site-plan.html
@@ -165,13 +165,16 @@
         <img src="images/hero.png" alt="hero">
  
       </ul>
-      <h3>[Page 3]</h3>
+      <h3>[For the Page three, I will create a Biography or in other words wite a little aboiut myself in order to introduce myslef to the audience and show a little of background.]</h3>
       <p>
-        [Written copy for the Page 3 here]
+        [Hi, I am Adonai Villalobos, better known as Ado which is short for Adonai, I was born and raised in Maracaibo, Venezuela. For the past two years I have been married to a incredible woman and we have a energetic and loving daugther. We live in Berlin, Germany. My web developing path started almost 2 years ago when I decided to start with small steps into this world.]
       </p>
       <p>Images for the Page 3</p>
-        <img src="#" alt="image for page3">
-        <img src="#" alt="image for page3">
+      <img src="images/advr_logo.png" alt="logo">
+      <img src="images/facebook.png" alt="facebook">
+      <img src="images/instagram.png" alt="instagram">
+      <img src="images/twitter.png" alt="twitter">
+      <img src="images/hero.png" alt="hero">
 
       </ul>
       <hr>
