--- a/get2work/site-plan.html
+++ b/get2work/site-plan.html
@@ -186,21 +186,22 @@
 
       <h3>Home</h3>
       <p>         
-        [Any additional details about home that the wireframe does not make clear]
+        [My intention is make all the pages look the same in terms of the logo, nav, footer and if possible the hero.]
       </p>
-      <img src="#" alt="home page wireframe">
+      <img src="images/home.png" alt="home page wireframe | Home">
 
-      <h3>[Page 2]</h3>
-      <p>         
-        [Any additional details about page 2 that the wireframe does not make clear]
-      </p>
-      <img src="#" alt="page 2 wireframe">
 
-      <h3>[Page 3]</h3>
+      <h3>[Courses]</h3>
       <p>         
-        [Any additional details about page 3 that the wireframe does not make clear]
+        [I will like to create an individual space for the courses later and to have videos of me teaching some principles.]
       </p>
-      <img src="#" alt="page 3 wireframe">
+      <img src="images/course.jpeg" alt="page 2 wireframe | Courses">
+
+      <h3>[About Me]</h3>
+      <p>         
+        [The about me section might have extra images and longer text than in the wireframe]
+      </p>
+      <img src="images/aboutme.jpeg" alt="page 3 wireframe | About Me">
     </main>
   </body>
 
