--- a/get2work/index.html
+++ b/get2work/index.html
@@ -1,69 +1,27 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Adonai Villalobos | Web Developer | Personal Site</title>
-    <link rel="stylesheet" href="styles/styles.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Your Portfolio</title>
+  <link rel="stylesheet" href="styles/styles.css">
 </head>
 <body>
-    <div id="content">
-        <header>
-            <a id="logo-link" href="index.html">
-                <img class="logo" src="images/advr_logo.png" alt="Logo">
-            </a>
-            <nav>
-                <a href="index.html">Home</a>
-                <a href="#">Page 2</a>
-                <a href="site-plan.html">Site Plan</a>
-                <a href="contactme.html">Contact Me</a>
-            </nav>
-        </header>
+  <header>
+    <div class="logo">
+      <img src="images/advr_logo.png" alt="Adonai's">
     </div>
-    <main>
-    <section class="audience">
-        <img class="audience-img" src="images/audience.jpeg" alt="Audience">
-        <h2>Audience</h2>
-        <p>Visitors will come to my site for various reason, and it is essential to understand their motivations. These reasons may include:Visitors will come to my site for various reason, and it is essential to understand their motivations. These reasons may include:<br></p>
-        <ul>
-            <li><strong>Information:</strong> Visitors seek relevant and valuable information. This could be educational content, news, product details, or any other data that addresses their needs or interest.</li>
-            <li><strong>Entertainemt:</strong> Some visitors may come to be entertained. They are looking for engaging content, such as videos, games, or stories that captivate their attention.</li>
-            <li><strong>Community:</strong> Visitors often seek a sense of community or social interaction.</li>
-        </ul>
-    </section>
-    <section class="vision">
-        <img class="vision-img" src="images/vision.jpeg" alt="Vision">
-        <p>The vision or reason for this website is to help other to learn and understand this world of web developing and programming, soomething that could difficult we can find different ways to transform it in a easy path.<br></p>
-        <p>Even if it is the beginning for me in this world, I can offer my visitors the option to have someone who knows what it is like to know nothing, and to do my best to learn and put into practice all that I have learned.<br></p>
-    <div class="future-projects">
-        <h2>Future Projects</h2>
-        <section class="html">
-            <img class="html-card" src="images/html.png" alt="HTMl">
-            <h2>HTML Course</h2>
-        </section>
-        <section class="css">
-            <img class="css-card" src="images/css.png" alt="CSS">
-            <h2>CSS Course</h2>
-        </section>
-    </div>
-    </section>
-    </main>
-    <footer>
-        <p>ADVR Web Developer Portfolio &copy; 2023 - Adonai Villalobos</p>
-        <p><a href="site-plan.html">Site Plan</a></p>
-        <p><a href="contactme.html">Contact Me</a></p>
-            <div class="social">
-                <a href="https://facebook.com" target="_blank">
-                <img src="images/facebook.png" alt="facebook icon">
-                </a>
-                <a href="https://twitter.com" target="_blank">
-                <img src="images/twitter.png" alt="twitter icon">
-                </a>
-                <a href="https://instagram.com" target="_blank">
-                <img src="images/instagram.png" alt="instagram icon">
-                </a>
-            </div>
-    </footer>
-    
+    <nav>
+      <ul>
+        <li><a href="#home">Home</a></li>
+        <li><a href="#about">About</a></li>
+        <li><a href="#projects">Projects</a></li>
+        <li><a href="#contact">Contact</a></li>
+      </ul>
+    </nav>
+  </header>
+
+  <!-- Other content of your homepage goes here -->
+
 </body>
 </html>
