--- a/get2work/index.html
+++ b/get2work/index.html
@@ -9,7 +9,7 @@
 <body>
   <header>
     <div class="logo">
-      <img src="images/advr_logo.png" alt="Adonai's">
+      <img src="images/ado_logo_2.png" alt="Adonai's">
     </div>
     <nav>
       <ul>
