--- a/get2work/index.html
+++ b/get2work/index.html
@@ -13,10 +13,10 @@
     </div>
     <nav>
       <ul>
-        <li><a href="#home">Home</a></li>
+        <li><a href="index.hmtl">Home</a></li>
         <li><a href="#about">About</a></li>
         <li><a href="#projects">Projects</a></li>
-        <li><a href="#contact">Contact</a></li>
+        <li><a href="#contactme.html">Contact Me</a></li>
       </ul>
     </nav>
   </header>
