--- a/get2work/index.html
+++ b/get2work/index.html
@@ -14,7 +14,7 @@
     <nav>
       <ul>
         <li><a href="index.hmtl">Home</a></li>
-        <li><a href="#about">About</a></li>
+        <li><a href="aboutme.hmtl">About</a></li>
         <li><a href="#projects">Projects</a></li>
         <li><a href="#contactme.html">Contact Me</a></li>
       </ul>
