--- a/get2work/index.html
+++ b/get2work/index.html
@@ -20,6 +20,17 @@
       </ul>
     </nav>
   </header>
+  <div class="spacer"></div> <!-- White space after navigation -->
+
+<section class="audience-section">
+  <div class="audience-content">
+    <img src="images/audience.jpeg" alt="audience">
+    <h2>Audience</h2>
+    <p>
+        Visitors will come to my site for various reason, and it is essential to understand their motivations. These reasons may include:Visitors will come to my site for various reason, and it is essential to understand their motivations. These reasons may include:<br>
+    </p>
+  </div>
+</section>
 
   <!-- Other content of your homepage goes here -->
 
