--- a/get2work/index.html
+++ b/get2work/index.html
@@ -25,7 +25,6 @@
 <section class="audience-section">
   <div class="audience-content">
     <h2>Audience</h2>
-    <img src="images/audience.jpeg" alt="audience">
     <p>
         Visitors will come to my site for various reason, and it is essential to understand their motivations. These reasons may include:Visitors will come to my site for various reason, and it is essential to understand their motivations. These reasons may include:<br>
     </p>
@@ -35,7 +34,11 @@
         <li><strong>Community:</strong> Visitors often seek a sense of community or social interaction.</li>
     </ul>
   </div>
+  <div class="audience-image">
+    <img src="images/audience.jpeg" alt="audience">
+  </div>
 </section>
+
 
   <!-- Other content of your homepage goes here -->
 
