--- a/get2work/index.html
+++ b/get2work/index.html
@@ -21,7 +21,7 @@
     </nav>
   </header>
   <div class="spacer"></div> <!-- White space after navigation -->
-
+<main> 
 <section class="audience-section">
   <div class="audience-content">
     <div class="audience-image">
@@ -56,6 +56,11 @@
       </div>
   </div>
 </section>
+
+
+
+
+</main>
 
 
   <!-- Other content of your homepage goes here -->
