--- a/get2work/index.html
+++ b/get2work/index.html
@@ -22,38 +22,39 @@
   </header>
   <div class="spacer"></div> <!-- White space after navigation -->
 <main> 
-<section class="audience-section">
-  <div class="audience-content">
-    <div class="audience-image">
-      <img src="images/audience.jpeg" alt="audience">
+  <section class="audience-section">
+    <div class="audience-content">
+      <div class="audience-image">
+        <img src="images/audience.jpeg" alt="audience">
+      </div>
+      <div class="audience-text">
+        <h2>Audience</h2>
+        <p>
+          Visitors will come to my site for various reasons, and it is essential to understand their motivations. These reasons may include:<br>
+        </p>
+        <ul>
+          <li><strong>Information:</strong> Visitors seek relevant and valuable information. This could be educational content, news, product details, or any other data that addresses their needs or interests.</li>
+          <li><strong>Entertainment:</strong> Some visitors may come to be entertained. They are looking for engaging content, such as videos, games, or stories that captivate their attention.</li>
+          <li><strong>Community:</strong> Visitors often seek a sense of community or social interaction.</li>
+        </ul>
+      </div>
     </div>
-    <div class="audience-text">
-      <h2>Audience</h2>
-    <p>
-        Visitors will come to my site for various reason, and it is essential to understand their motivations. These reasons may include:Visitors will come to my site for various reason, and it is essential to understand their motivations. These reasons may include:<br>
-    </p>
-    <ul>
-        <li><strong>Information:</strong> Visitors seek relevant and valuable information. This could be educational content, news, product details, or any other data that addresses their needs or interest.</li>
-        <li><strong>Entertainemt:</strong> Some visitors may come to be entertained. They are looking for engaging content, such as videos, games, or stories that captivate their attention.</li>
-        <li><strong>Community:</strong> Visitors often seek a sense of community or social interaction.</li>
-    </ul>
-    </div>
-</section>
-<div class="spacer"></div> <!--White space after the audience section-->
-<section class="vision-section">
-  <div class="vision-content">
-    <div class="audience-image">
-      <img src="images/vision.jpeg" alt="vision / purpose">
-    </div>
-      <div class="vision -text">
+  </section>
+  <div class="spacer"></div> <!-- White space after the audience section -->
+  <section class="vision-section">
+    <div class="vision-content">
+      <div class="vision-image"> 
+        <img src="images/vision.jpeg" alt="vision / purpose">
+      </div>
+      <div class="vision-text"> 
         <h2>Purpose</h2>
         <p>
-          The vision or reason for this website is to help other to learn and understand this world of web developing and programming, something that could difficult we can find different ways to transform it in a easy path.<br>
-          Even if it is the beginning for me in this world, I can offer my visitors the option to have someone who knows what it is like to know nothing, and to do my best to learn and put into practice all that I have learned.<br>
+          The vision or reason for this website is to help others learn and understand the world of web development and programming, which can sometimes be challenging. I aim to find different ways to make it an easier path.<br>
+          Even though I'm a beginner in this world, I can offer my visitors the option to have someone who knows what it's like to start from nothing. I'll do my best to learn and put into practice all that I have learned.<br>
         </p>
       </div>
-  </div>
-</section>
+    </div>
+  </section>
 
 
 
