--- a/get2work/index.html
+++ b/get2work/index.html
@@ -56,6 +56,19 @@
     </div>
   </section>
   <div class="spacer"></div>
+  <section class="courses-section">
+    <h2>Courses</h2>
+    <div class="courses-images">
+      <div class="course-image">
+        <img src="images/html.png" alt="HTML Course">
+        <p>HTML Course Description</p>
+      </div>
+      <div class="course-image">
+        <img src="images/css.png" alt="CSS Course">
+        <p>CSS Course Description</p>
+      </div>
+    </div>
+  </section>
 
 
 
