--- a/get2work/index.html
+++ b/get2work/index.html
@@ -61,11 +61,15 @@
     <div class="courses-images">
       <div class="course-image">
         <img src="images/html.png" alt="HTML Course">
-        <p>HTML Course Description</p>
+        <p>
+          This comprehensive course provides an in-depth understanding of Hypertext Markup Language (HTML), the foundation of web development. Whether you're an absolute beginner or looking to enhance your skills, this course covers everything you need to create structured and semantic web content. Dive into the core principles of HTML, learn to craft well-structured documents, understand essential tags, elements, and best practices. Through hands-on projects and practical examples, you'll build the proficiency needed to create engaging and accessible web pages.
+        </p>
       </div>
       <div class="course-image">
         <img src="images/css.png" alt="CSS Course">
-        <p>CSS Course Description</p>
+        <p>
+          Explore the world of Cascading Style Sheets (CSS) through our fundamental course designed for both beginners and those looking to refine their styling abilities. Gain mastery over CSS properties, selectors, and layout techniques to bring creativity and visual appeal to your web projects. From basic styling to advanced concepts like responsive design and CSS frameworks, this course provides a comprehensive understanding of how to beautify and structure web content. Engage in practical exercises and real-world examples to elevate your web styling skills and create visually stunning websites.
+        </p>
       </div>
     </div>
   </section>
