--- a/get2work/index.html
+++ b/get2work/index.html
@@ -60,7 +60,7 @@
     <h2>Courses</h2>
     <div class="courses-images">
       <div class="course-image">
-        <img src="images/html.png" alt="HTML Course">
+        <img src="images/html_.png" alt="HTML Course">
         <p>
           This comprehensive course provides an in-depth understanding of Hypertext Markup Language (HTML), the foundation of web development. Whether you're an absolute beginner or looking to enhance your skills, this course covers everything you need to create structured and semantic web content. Dive into the core principles of HTML, learn to craft well-structured documents, understand essential tags, elements, and best practices. Through hands-on projects and practical examples, you'll build the proficiency needed to create engaging and accessible web pages.
         </p>
