--- a/get2work/aboutme.html
+++ b/get2work/aboutme.html
@@ -33,6 +33,18 @@
       Join me on this invigorating expedition fueled by an unquenchable thirst for knowledge, an unwavering commitment to excellence, and an earnest aspiration to redefine the nexus of technology and human interaction.
     </p>
   </section>
+  <setion>
+    <h2>Interests</h2>
+    <p>
+      Beyond the professional realm, I find immense joy and fulfillment in diverse interests that invigorate my life's canvas.
+    </p>
+    <ul>
+      <li><strong>Reading:</strong> Imbibing the wisdom and narratives penned by diverse authors is a cherished pursuit. Engaging with literature opens gateways to new perspectives, transporting me to realms where imagination reigns supreme and knowledge is boundless.</li>
+      <li><strong>Embracing the Outdoors:</strong> There's an inexplicable thrill in embracing the sun's warmth while venturing outdoors. Exploring nature's beauty, whether through invigorating hikes, tranquil walks, or simply basking in the sunlight, rejuvenates my spirit and nourishes my soul.</li>
+      <li><strong>Eternal Learner:</strong> A perpetual thirst for knowledge propels me forward. The pursuit of learning is a lifelong endeavor that knows no bounds. Every opportunity to acquire new skills, delve into uncharted territories, and broaden my understanding of the world is an adventure I eagerly embrace.</li>
+      <li><strong>Pushing Boundaries:</strong> Stepping beyond comfort zones and embarking on endeavors that challenge my limits is an ongoing journey. The process of exploring uncharted territories and conquering new horizons instills in me a sense of resilience and an unwavering determination to grow personally and professionally.</li>
+    </ul>
+  </setion>
   
 </main>
 <footer>
