--- a/get2work/aboutme.html
+++ b/get2work/aboutme.html
@@ -45,8 +45,10 @@
       <li><strong>Pushing Boundaries:</strong> Stepping beyond comfort zones and embarking on endeavors that challenge my limits is an ongoing journey. The process of exploring uncharted territories and conquering new horizons instills in me a sense of resilience and an unwavering determination to grow personally and professionally.</li>
     </ul>
   </setion>
-  
 </main>
+<aside class="profile-image">
+  <img src="images/ado_id.jpeg" alt="my profile picture">
+</aside>
 <footer>
   <p>Adonai Villalobos &copy; 2023 - Adonai Villalobos</p>
   <p><a href="site-plan.html">Site Plan</a></p>
