--- a/get2work/aboutme.html
+++ b/get2work/aboutme.html
@@ -21,6 +21,11 @@
     </nav>
   </header>
   <div class="spacer"></div> <!-- White space after navigation -->
+  <div class="container">
+    <aside>
+      <img src="images/ado_id.jpeg" alt="my profile picture">
+    </aside>
+  </div>
 <main class="about-content">
   <section>
     <h2>Introduction</h2>
@@ -46,9 +51,6 @@
     </ul>
   </setion>
 </main>
-<aside class="profile-image">
-  <img src="images/ado_id.jpeg" alt="my profile picture">
-</aside>
 <footer>
   <p>Adonai Villalobos &copy; 2023 - Adonai Villalobos</p>
   <p><a href="site-plan.html">Site Plan</a></p>
