--- a/get2work/aboutme.html
+++ b/get2work/aboutme.html
@@ -26,8 +26,8 @@
       <img src="images/ado_id.jpeg" alt="my profile picture">
     </aside>
   </div>
-<main class="about-content">
-  <section>
+<main class="content">
+  <section class="about-section">
     <h2>Introduction</h2>
     <p>Greetings,<br>
       I am Adonai Villalobos, originating from a close-knit Venezuelan family, which comprises my esteemed parents, a cherished younger sister, and myself. Over the past six years, my professional journey has been rooted in the domain of Hospitality and Tourism—an arena where I have honed my skills in curating unforgettable experiences for a diverse spectrum of global travelers.<br>
@@ -38,7 +38,7 @@
       Join me on this invigorating expedition fueled by an unquenchable thirst for knowledge, an unwavering commitment to excellence, and an earnest aspiration to redefine the nexus of technology and human interaction.
     </p>
   </section>
-  <setion>
+  <setion class="interest-section">
     <h2>Interests</h2>
     <p>
       Beyond the professional realm, I find immense joy and fulfillment in diverse interests that invigorate my life's canvas.
