changes on image size

--- a/get2work/aboutme.html
+++ b/get2work/aboutme.html
@@ -23,7 +23,7 @@
   <div class="spacer"></div> <!-- White space after navigation -->
   <div class="container">
     <aside>
-      <img src="images/ado_id.jpeg" alt="my profile picture">
+      <img src="images/ado_id_.jpeg" alt="my profile picture">
     </aside>
   </div>
 <main class="content">
