--- a/get2work/aboutme.html
+++ b/get2work/aboutme.html
@@ -25,6 +25,9 @@
     <aside>
       <img src="images/ado_id_.jpeg" alt="my profile picture">
     </aside>
+    <aside>
+      <img src="images/family.JPG" alt="family">
+    </aside>
   </div>
 <main class="content">
   <section class="about-section">
