--- a/get2work/aboutme.html
+++ b/get2work/aboutme.html
@@ -26,7 +26,7 @@
       <img src="images/ado_id_.jpeg" alt="my profile picture">
     </aside>
     <aside>
-      <img src="images/family.JPG" alt="family">
+      <img src="images/family_.jpg" alt="family">
     </aside>
   </div>
 <main class="content">
