--- a/get2work/aboutme.html
+++ b/get2work/aboutme.html
@@ -25,10 +25,10 @@
     <aside>
       <img src="images/ado_id_.jpeg" alt="my profile picture">
     </aside>
+    <aside>
+      <img src="images/family_.jpg" alt="family">
+    </aside>
   </div>
-  <aside class="additional-image">
-    <img src="images/family_.jpg" alt="family">
-  </aside>
 <main class="content">
   <section class="about-section">
     <h2>Introduction</h2>
