--- a/get2work/aboutme.html
+++ b/get2work/aboutme.html
@@ -13,62 +13,61 @@
     </div>
     <nav>
       <ul>
-        <li><a href="index.hmtl">Home</a></li>
+        <li><a href="index.html">Home</a></li>
         <li><a href="aboutme.html">About Me</a></li>
         <li><a href="courses.html">Courses</a></li>
-        <li><a href="#contactme.html">Contact Me</a></li>
+        <li><a href="contactme.html">Contact Me</a></li>
       </ul>
     </nav>
   </header>
   <div class="spacer"></div> <!-- White space after navigation -->
   <div class="container">
-    <aside>
+    <div>
       <img src="images/ado_id_.jpeg" alt="my profile picture">
-    </aside>
-    <aside>
+    </div>
+    <div>
       <img src="images/family_.jpg" alt="family">
-    </aside>
+    </div>
   </div>
-<main class="content">
-  <section class="about-section">
-    <h2>Introduction</h2>
-    <p>Greetings,
-      I am Adonai Villalobos, originating from a close-knit Venezuelan family, which comprises my esteemed parents, a cherished younger sister, and myself. Over the past six years, my professional journey has been rooted in the domain of Hospitality and Tourism—an arena where I have honed my skills in curating unforgettable experiences for a diverse spectrum of global travelers.
+  <main class="content">
+    <section class="about-section">
+      <h2>Introduction</h2>
+      <p>Greetings, I am Adonai Villalobos, originating from a close-knit Venezuelan family, which comprises my esteemed parents, a cherished younger sister, and myself. Over the past six years, my professional journey has been rooted in the domain of Hospitality and Tourism—an arena where I have honed my skills in curating unforgettable experiences for a diverse spectrum of global travelers.
       Simultaneously, my innate fascination with the ever-evolving technology sphere, particularly in the domains of web design and programming, has been an enduring facet of my life's narrative.
       While orchestrating seamless hospitality experiences, the allure of technology's transformative potential, specifically in the intricate arenas of web design and programming, has persistently beckoned me. The prospect of sculpting digital landscapes transcending geographical boundaries, coupled with the thrill of unraveling complex coding architecture to engineer seamless user interactions, remains a constant source of inspiration.
       Navigating the intersecting realms of hospitality and technology, my pursuit is to amalgamate the proficiency garnered from my hospitality background with an unwavering enthusiasm for web design and programming. My objective is to contribute innovatively to this dynamic domain, infusing technological advancements with a touch of personalized hospitality.
       This journey embodies more than professional advancement; it symbolizes a fervent dedication to cultivating impactful and user-centric digital experiences.
       Join me on this invigorating expedition fueled by an unquenchable thirst for knowledge, an unwavering commitment to excellence, and an earnest aspiration to redefine the nexus of technology and human interaction.
-    </p>
-  </section>
-    <setion class="interest-section">
-    <h2>Interests</h2>
-    <p>
-      Beyond the professional realm, I find immense joy and fulfillment in diverse interests that invigorate my life's canvas.
-    </p>
-    <ul>
-      <li><strong>Reading:</strong> Imbibing the wisdom and narratives penned by diverse authors is a cherished pursuit. Engaging with literature opens gateways to new perspectives, transporting me to realms where imagination reigns supreme and knowledge is boundless.</li>
-      <li><strong>Embracing the Outdoors:</strong> There's an inexplicable thrill in embracing the sun's warmth while venturing outdoors. Exploring nature's beauty, whether through invigorating hikes, tranquil walks, or simply basking in the sunlight, rejuvenates my spirit and nourishes my soul.</li>
-      <li><strong>Eternal Learner:</strong> A perpetual thirst for knowledge propels me forward. The pursuit of learning is a lifelong endeavor that knows no bounds. Every opportunity to acquire new skills, delve into uncharted territories, and broaden my understanding of the world is an adventure I eagerly embrace.</li>
-      <li><strong>Pushing Boundaries:</strong> Stepping beyond comfort zones and embarking on endeavors that challenge my limits is an ongoing journey. The process of exploring uncharted territories and conquering new horizons instills in me a sense of resilience and an unwavering determination to grow personally and professionally.</li>
-    </ul>
-    </setion>
-</main>
-<footer>
-  <p>Adonai Villalobos &copy; 2023 - Adonai Villalobos</p>
-  <p><a href="site-plan.html">Site Plan</a></p>
-  <p><a href="contactme.html">Contact Me</a></p>
-      <div class="social">
-          <a href="https://facebook.com" target="_blank">
-          <img src="images/facebook.png" alt="facebook icon">
-          </a>
-          <a href="https://twitter.com" target="_blank">
-          <img src="images/twitter.png" alt="twitter icon">
-          </a>
-          <a href="https://instagram.com" target="_blank">
-          <img src="images/instagram.png" alt="instagram icon">
-          </a>
-      </div>
+      </p>
+    </section>
+    <section class="interest-section">
+      <h2>Interests</h2>
+      <p>
+        
+      </p>
+      <ul>
+        <li><strong>Reading:</strong> Imbibing the wisdom and narratives penned by diverse authors is a cherished pursuit. Engaging with literature opens gateways to new perspectives, transporting me to realms where imagination reigns supreme and knowledge is boundless.</li>
+        <li><strong>Embracing the Outdoors:</strong>There's an inexplicable thrill in embracing the sun's warmth while venturing outdoors. Exploring nature's beauty, whether through invigorating hikes, tranquil walks, or simply basking in the sunlight, rejuvenates my spirit and nourishes my soul./li>
+        <li><strong>Eternal Learner:</strong> A perpetual thirst for knowledge propels me forward. The pursuit of learning is a lifelong endeavor that knows no bounds. Every opportunity to acquire new skills, delve into uncharted territories, and broaden my understanding of the world is an adventure I eagerly embrace.</li>
+        <li><strong>Pushing Boundaries:</strong> A perpetual thirst for knowledge propels me forward. The pursuit of learning is a lifelong endeavor that knows no bounds. Every opportunity to acquire new skills, delve into uncharted territories, and broaden my understanding of the world is an adventure I eagerly embrace.</li>
+      </ul>
+    </section>
+  </main>
+  <footer>
+    <p>Adonai Villalobos &copy; 2023 - Adonai Villalobos</p>
+    <p><a href="site-plan.html">Site Plan</a></p>
+    <p><a href="contactme.html">Contact Me</a></p>
+    <div class="social">
+      <a href="https://facebook.com" target="_blank">
+        <img src="images/facebook.png" alt="facebook icon">
+      </a>
+      <a href="https://twitter.com" target="_blank">
+        <img src="images/twitter.png" alt="twitter icon">
+      </a>
+      <a href="https://instagram.com" target="_blank">
+        <img src="images/instagram.png" alt="instagram icon">
+      </a>
+    </div>
   </footer>
 </body>
 </html>
